Add buttons and logic

--- a/game.html
+++ b/game.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <title>Rock Paper Scissor</title>
     <script src="game.js"></script>
+    <style>
+        h1, button {
+            font-family: "Monaco", Monospace;
+        }
+        button {
+            width: 100px;
+            height: 70px;
+            font-size:20px;
+        }
+    </style>
 </head>
 <body>
-
+    <h1>Rock, Paper or Scissor ?</h1>
+    <button data-choice="rock" style="color: blue;">Rock</button>
+    <button data-choice="paper" style="color: red;">Paper</button>
+    <button data-choice="scissor" style="color: green;">Scissor</button>
 </body>
 </html>
